--- a/Hindi.html
+++ b/Hindi.html
@@ -4,6 +4,17 @@
     <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TRY - Hindi</title>
+    
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-EW8Y3KLM19"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-EW8Y3KLM19');
+  </script>
+    
   </head>
   <body>
     <h1><a href="Language.html" target="_blank"><font color="#f0a4ab">Language(외국어)</font></a><h1>
