--- a/Video.html
+++ b/Video.html
@@ -4,6 +4,17 @@
   <title>Make Your Content!</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="utf-8">
+  
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-EW8Y3KLM19"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-EW8Y3KLM19');
+  </script>
+  
 </head>
 
 <body>
