--- a/Welcome! Welcome!.html
+++ b/Welcome! Welcome!.html
@@ -3,6 +3,17 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Welcome NEW Tryer!</title>
+  
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-EW8Y3KLM19"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-EW8Y3KLM19');
+  </script>
+  
 </head>
 <body>
   <h1><span>Welcome NEW Tryer!</span></h1>
