--- a/Welcome! Welcome!.html
+++ b/Welcome! Welcome!.html
@@ -18,10 +18,7 @@
 <body>
   <h1><span>Welcome NEW Tryer!</span></h1>
 
-  <video controls autoplay loop>
-    <source src="Note.mp4" type="video/mp4">
-    Meet N.E.W. Tryers!
-  </video>
+<img src="Welcome.jpg" alt="Welcome, N.E.W Tryer!" title="Photo by Jukan Tateisi on Unsplash" style="max-width:100%;"/>
 
 <h2>☟ Enjoy Your T.R.Y! ☟</h2>
 
