--- a/Welcome! Welcome!.html
+++ b/Welcome! Welcome!.html
@@ -18,11 +18,8 @@
 <body>
   <h1><span>Welcome NEW Tryer!</span></h1>
 
-  <video controls autoplay loop>
-    <source src="Note.mp4" type="video/mp4">
-    Meet N.E.W. Tryers!
-  </video>
-
+<img src="Welcome.jpg" alt="Hello, Hello!" title="Photo by Artem Bryzgalov on Unsplash" style="max-width:100%;"/>
+  
 <h2>☟ Enjoy Your T.R.Y! ☟</h2>
 
 <audio controls autoplay>
