--- a/Check Yourself.html
+++ b/Check Yourself.html
@@ -82,7 +82,7 @@
     절대로 잊지말아요.
 </p>
 <p>
-  <strong><font color="#f0a4ab">그대, 지금 이순간도 충분히 빛난다는 걸요 :)</font></strong>
+  <strong><font color="#fff">그대, 지금 이순간도 충분히 빛난다는 걸요 :)</font></strong>
 </p>
 <p>
   자, 이제 정말로 시작해볼까?
