--- a/Check Yourself.html
+++ b/Check Yourself.html
@@ -85,7 +85,7 @@
   <strong><font color="#fff">그대, 지금 이순간도 충분히 빛난다는 걸요 :)</font></strong>
 </p>
 <p>
-  자, 이제 정말로 시작해볼까?
+  자, 이제 정말로 시작해볼까요?
   <br>
   Alright! <strong>Let's <u>TRY</u> it!</strong>
 </p>
